--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,13 +2,16 @@
 
 - type: github
   icon: "fab fa-github"
+  url: "https://github.com/briankang0315"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: linkedin
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/dhbriank/"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
+  url: "dhbriank@gmail.com"
 
 - type: rss
   icon: "fas fa-rss"
