--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ timezone:
 
 title: Brian's Blog # the main title
 
-tagline: Educational & Technical posts  # it will display as the subtitle
+tagline: 🎓 Master of Information Technology (Business Information Systems)
+         🎓 Bachelors with Honours in Computer Science  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
  Technical and educational blog by Brian
@@ -96,7 +97,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: '/assets/img/프사.jpg'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
